Добавил описание и инструкцию шифров в новой активити.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,76 @@
     <string name="app_name">CipherVRT</string>
     <string name="encrypt">Encrypt</string>
     <string name="decrypt">Decrypt</string>
+    <string name="Cezar">
+        Шифр Цезаря, также известный как шифр сдвига,
+        код Цезаря или сдвиг Цезаря — один из самых простых и наиболее широко известных методов шифрования.
+        Шифр Цезаря — это вид шифра подстановки, в котором каждый символ в открытом тексте заменяется символом,
+        находящимся на некотором постоянном числе позиций левее или правее него в алфавите.
+        Например, в шифре со сдвигом вправо на 3, А была бы заменена на Г, Б станет Д, и так далее.
+    </string>
+    <string name="CezarALG">
+        В качестве ключа указываете положительное число.
+    </string>
+
+    <string name="Atbash">
+        Самый-самый простой шифр. Его суть – переворот алфавита с ног на голову.
+        Например, есть у нас алфавит, который полностью соответствует обычной латинице.\n
+        a b c d e f g h i j k l m n o p q r s t u v w x y z\n
+        Для реализации шифра Атбаша просто инвертируем его. «А» станет «Z», «B» превратится в «Y» и наоборот.
+    </string>
+    <string name="AtbashALG">
+        Ключом является зашифрованный текст.
+    </string>
+
+    <string name="Vijener">
+        Шифр Виженера (фр. Chiffre de Vigenère) — метод полиалфавитного шифрования буквенного текста с использованием ключевого слова.
+        Этот метод является простой формой многоалфавитной замены. Шифр Виженера изобретался многократно.
+        Впервые этот метод описал Джовани Баттиста Белласо (итал. Giovan Battista Bellaso) в книге La cifra del. Sig.
+        Giovan Battista Bellasо в 1553 году, однако в XIX веке получил имя Блеза Виженера, французского дипломата.
+        Метод прост для понимания и реализации, он является недоступным для простых методов криптоанализа.
+        Хотя шифр легко понять и реализовать, на протяжении трех столетий он противостоял всем попыткам его сломать;
+        чем и заработал название le chiffre indéchiffrable (с французского \'неразгаданный шифр\').
+        Многие люди пытались реализовать схемы шифрования, которые по сути являлись шифрами Виженера.
+        Метод является усовершенствованным шифром Цезаря, где буквы смещались на определенную позицию.
+        Шифр Виженера состоит из последовательности нескольких шифров Цезаря с различными значениями сдвига.
+        Допустим у нас есть некий алфавит, где каждой букве соответствуют цифры:\n
+
+        0 1 2 3 4 5 6 7 8 9  10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
+        | | | | | | | | | |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
+        A B C D E F G H I J  K  L  M  N  O  P  Q  R  S  T  U  V  W  X  Y  Z\n
+
+        Тогда если буквы a-z соответствуют числам 0-25, то шифрование Виженера можно записать в виде формулы:\n
+        Ci = (Pi + Ki) mod 26\n
+        Расшифровка:\n
+        Pi = (Ci - Ki + 26) mod 26\n
+    </string>
+    <string name="VijenerALG">
+        Текст который нужно зашифровать и ключ от шифра должны быть одинаковой длины, но не волнуйтесь,
+        алгоритм сам расшитает, если длина ключа не совподает с длиной текста. Так что можете даже не вводить ключ,
+        программа сама выдаст вам его из случайного набора символов.
+    </string>
+
+    <string name="Sparta">
+        Скита́ла или сцита́ла (от греч. σκυτάλη «жезл») — инструмент, используемый для осуществления перестановочного шифрования,
+        в криптографии известный также как шифр Древней Спарты.
+        Представляет собой цилиндр и узкую полоску пергамента, на которой писалось сообщение,
+        обматывавшуюся вокруг него по спирали. Античные греки и спартанцы, предположительно,
+        использовали этот шифр для обмена сообщениями во время военных кампаний.\n
+
+        Для шифрования сообщения использовались пергаментная лента и палочка цилиндрической формы с фиксированными длиной и диаметром.
+        Пергаментная лента наматывалась на палочку так, чтобы не было ни просветов, ни нахлёстов.
+        Написание сообщения производилось по намотанной пергаментной ленте по длинной стороне цилиндра.
+        После того, как достигался конец намотанной ленты,
+        палочка поворачивалась на часть оборота и написание сообщения продолжалось.
+        После разматывания ленты на ней оказывалось зашифрованное сообщение.
+        Расшифрование выполнялась с использованием палочки таких же типоразмеров.
+        Сам процесс шифрования заключался в перестановке символов исходного текста в соответствии с длиной окружности палочки.
+    </string>
+    <string name="SpartaALG">
+        Ключом является зашифрованный текст.
+    </string>
+
+
     <string-array name="namesCyphers">
         <item>Цезаря</item>
         <item>Атбаш</item>
