Наконец-то исправил баг с затиранием текста при повороте экрана.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     </string>
     <string name="VijenerALG">
         Текст который нужно зашифровать и ключ от шифра должны быть одинаковой длины, но не волнуйтесь,
-        алгоритм сам расшитает, если длина ключа не совподает с длиной текста. Так что можете даже не вводить ключ,
+        алгоритм сам расшитает, если длина ключа не совпадает с длиной текста. Так что можете даже не вводить ключ,
         программа сама выдаст вам его из случайного набора символов.
     </string>
 
