--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,10 +2,21 @@
 <resources>
     <string name="encrypt">encrypt</string>
     <string name="decrypt">Decrypt</string>
+
     <string-array name="namesCyphers">
         <item>Цезаря</item>
         <item>Атбаш</item>
         <item>Спарты</item>
         <item>Виженера</item>
+    </string-array>
+
+    <string-array name="ChoiceHack">
+        <item>Цезаря</item>
+    </string-array>
+
+    <string-array name="Alphabet">
+        <item>Русский</item>
+        <item>Английский</item>
+        <item>Оба</item>
     </string-array>
 </resources>
