Добавил взлом шифра спарты

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -12,6 +12,7 @@
 
     <string-array name="ChoiceHack">
         <item>Цезаря</item>
+        <item>Спарты</item>
     </string-array>
 
     <string-array name="Alphabet">
