--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
 
     <string-array name="ChoiceHack">
         <item>Цезаря</item>
+        <item>Спарты</item>
     </string-array>
 
     <string-array name="Alphabet">
